Header menu style fix for Firefox 6+ (tested on Firefox 6.0 and 7.0a2)
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@29847 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/header/header.css
+++ b/root/projects/slingshot/source/web/components/header/header.css
@@ -112,6 +112,16 @@
       padding: 22px 4px 5px;
    }
 }
+/* Firefox 6+ bug fix */
+@-moz-document regexp(".*")
+{
+   .header .app-items span.yui-button span.first-child button
+   {
+      margin-bottom: -1px;
+      padding: 18px 4px 0;
+   }
+}
+
 
 .header .app-items div.yuimenu div.bd ul li.yuimenuitem span.yuimenuitemlabel
 {
